webrtc/datachannel/basic-tcp.html will crash with an invalid crash https://bugs.webkit.org/show_bug.cgi?id=178285 <rdar://problem/34985374>

Reviewed by Eric Carlson.

Reintroduce change made to libwebrtc and erroneously removed when refreshing libwebrtc.

* Source/webrtc/rtc_base/physicalsocketserver.cc:


Canonical link: https://commits.webkit.org/206193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237970 268f45cc-cd09-0410-ab3c-d52691b4dbfc